--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,49 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>A Deep Learning Framework for Wind Turbine Repair Action Prediction Using Alarm Sequences and Long Short Term Memory Algorithms.</h3>
+							<ul class="blog-meta">
+											<li>Walker, C., 
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Rothon, C.</a>
+								</li>, Aslansefat, K., Papadopoulos, Y. and
+		<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>
+								<li>
+								<a href="https://arxiv.org/abs/2207.09457"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+With an increasing emphasis on driving down the costs of Operations and Maintenance (O&M) in the Offshore Wind (OSW) sector, comes the requirement to explore new methodology and applications of Deep Learning (DL) to the domain. Condition-based monitoring (CBM) has been at the forefront of recent research developing alarm-based systems and data-driven decision making. This paper provides a brief insight into the research being conducted in this area, with a specific focus on alarm sequence modelling and the associated challenges faced in its implementation. The paper proposes a novel idea to predict a set of relevant repair actions from an input sequence of alarm sequences, comparing Long Short-term Memory (LSTM) and Bidirectional LSTM (biLSTM) models. Achieving training accuracy results of up to 80.23%, and test accuracy results of up to 76.01% with biLSTM gives a strong indication to the potential benefits of the proposed approach that can be furthered in future research. The paper introduces a framework that integrates the proposed approach into O&M procedures and discusses the potential benefits which include the reduction of a confusing plethora of alarms, as well as unnecessary vessel transfers to the turbines for fault diagnosis and correction.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2022 8th International Symposium on Model-Based Safety Assessment, Munich, Germany</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Automated Question-Answering for Interactive Decision Support in Operations & Maintenance of Wind Turbines.</h3>
 							<ul class="blog-meta">
 											<li>
@@ -139,7 +182,8 @@ Intelligent question-answering (QA) systems have witnessed increased interest in
 						</div>
 						<!-- blog tags -->
 
-						<!-- publication entry -->	
+						<!-- publication entry -->											
+
 
 					<!-- publication entry -->
 
