--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ Deep learning, computer vision
 								<li><a href="https://scholar.google.com/citations?user=tJKdwIQAAAAJ&hl=en">Onatkut</a></li>
 								<li><i class="fa fa-clock-o"></i>August 2022</li>
 							</ul>
-							<h3>Climate Change Summer School 2022</h3>
+							<h3>Climate Change Summer 2022</h3>
 						<p>Onatkut participated in this year's <a href="https://www.climatechange.ai/events/summer_school2022">Climate Change AI Summer School 2022</a>, 
 						and presented this very timely research on detecting harmful algal blooms with deep learning at <a href="https://wcci2022.org/">IJCNN</a> in Padua, Italy this summer.
 							 </p>
