--- a/index.html
+++ b/index.html
@@ -797,8 +797,8 @@ Deep learning, computer vision
 								<li><i class="fa fa-clock-o"></i>September 2022</li>
 							</ul>
 							<h3>BDA at Hull Science Festival 2022</h3>
-						<p>We're at the Hull Science Festival this year! Erv is demonstrating (hands-on) how AI can be used to generate
-						create music collaboratively and Lydia is joining the Viper team to talk about the role of HPCs for AI. 
+						<p>We're at the <a href="https://scifest.hull.ac.uk/">Hull Science Festival</a> this year! Erv is demonstrating (hands-on) how AI can be used to generate
+						create music collaboratively and Lydia is joining the <a href="https://hpc.wordpress.hull.ac.uk/">Viper team</a> to talk about the role of HPCs for AI. 
 							 </p>
 						</div>
 					</div>
