--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@ Yifei holds a PhD from the University of Manchester (2021), where he researched 
 <h6>Victoria Bessonova</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:V.Bessonova-2020@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/victoria-bessonova/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
 <br> Climate change models, offshore wind, machine learning
 <br>
 <ul class="blog-meta">
@@ -515,7 +516,7 @@ Yifei holds a PhD from the University of Manchester (2021), where he researched 
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-Victoria is using climate change models and machine learning to generate accurate climate forecasts for operations and maintenance in offshore wind. 
+Victoria is an Aura CDT PhD student using climate change models and machine learning to generate accurate climate forecasts for operations and maintenance in offshore wind. 
 
 </p>
 </details>
@@ -601,6 +602,7 @@ Sedat is researching the memes and their content in a social and cultural contex
 <h6>Ervands Mumdzjans</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:E.MUMDZJANS-2020@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/ervands-mumdzjans-7ab852a2/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
 <br> AI, deep learning, time-series analysis
 <br>
 <ul class="blog-meta">
@@ -679,9 +681,11 @@ Victoria is researching a computational semiotics framework for the analysis and
 </ul>	
 <br>
 
+
 <h6>Ifeoluwa Wuraola</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:I.A.WURAOLA-2021@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/ifeoluwa-wuraola-72a750204/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
 <br> Natural language processing, social media analysis, discourse analysis
 <br>
 <ul class="blog-meta">
@@ -820,6 +824,37 @@ Deep learning, computer vision
 					<h2 class="title">News & Activities</h2>
 				</div>
 				<!-- /Section header -->
+
+
+			<div class="row">
+				<!-- blog -->		
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/joyjit-slc.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a></li>
+								<li><i class="fa fa-clock-o"></i>October 2022</li>
+							</ul>
+							<h3>Reckitt visit in Salt Lake City</h3>
+						<p>Joyjit spent some time at the <a href="https://www.reckitt.com/">Reckitt</a> offices in Salt Lake City to work directly with US colleagues our 
+						KTP AI Stability tool for nutraceutical data. Read a fuller account on <a href="https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A6987516015920189440/?midToken=AQHBPjnIWTOZbg&midSig=0nRLcngCG6Has1&trk=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed&trkEmail=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed-null-522tij%7El9btshsg%7Ega-null-voyagerOffline">LinkedIn</a>.	
+						Thanks so much to the team for hosting!
+							 </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->	
+
+
+				
+			<!-- /blog -->
+						</div>	
+
 
 			<div class="row">
 				<!-- blog -->		
