--- a/index.html
+++ b/index.html
@@ -681,6 +681,27 @@ Victoria is researching a computational semiotics framework for the analysis and
 </ul>	
 <br>
 
+<h6>Eamonn Tuton</h6>, PhD student 
+&nbsp;&nbsp;
+<a href="mailto:C.TUTON-2021@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/eamonn-tuton?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+<br> (Deep) machine learning, optimisation, Operations&Maintenance, logistics, offshore wind
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+Eamonn is part of the Aura CDT in Offshore Wind Energy and the Environment and is investigating how deep learning and
+optimisation (e.g. reinforcement learning) can be used to balance competing tradeoffs in O&M and logistics in offshore wind.
+</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
 
 <h6>Ifeoluwa Wuraola</h6>, PhD student 
 &nbsp;&nbsp;
@@ -833,6 +854,27 @@ Deep learning, computer vision
 	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
+							<img class="img-responsive"  src="./img/bda-banner2022.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">BDA</a></li>
+								<li><i class="fa fa-clock-o"></i>December 2022</li>
+							</ul>
+							<h3>BDA Christmas 2022</h3>
+						<p>We're excited for our annual Christmas research workshop on 7 Dec - especially as it falls together with 
+						our 5th anniversary this year! [<a href="./img/group1.jpeg"> early pic</a>] Here is our <a href="./img/bda_flyer_22.pdf">programme</a>. 
+							 </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->	
+
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
 							<img class="img-responsive"  src="./img/joyjit-slc.jpeg" alt="">
 						</div>
 						<div class="blog-content">
@@ -851,7 +893,6 @@ Deep learning, computer vision
 				<!-- /blog -->	
 
 
-				
 			<!-- /blog -->
 						</div>	
 
