--- a/deep_learning.html
+++ b/deep_learning.html
@@ -99,6 +99,49 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Generalized Ice Detection on Wind Turbine Rotor Blades with Neural Style Transfer.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Chatterjee, J.</a>
+								</li>, Alvela Nieto, M., Gelbhardt, H., 
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>, Ohlendorf, J. and K.D. Thoben. 
+								<li>
+								<a href="https://www.climatechange.ai/papers/neurips2022/47"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Wind energy’s ability to liberate the world of conventional sources of energy relies on lowering the significant costs associated with the maintenance of wind turbines. Since icing events on turbine rotor blades are a leading cause of operational failures, identifying icing in advance is critical. Some recent studies focus on specific wind parks and fail to generalize to unseen scenarios (e.g. new rotor blade designs). We propose the utilisation of synthetic data augmentation via neural style transfer to improve the generalization of existing ice prediction models. We show that training models with augmented data that captures domain-invariant icing characteristics can help improve predictive performance across multiple wind parks. Through efficient identification of icing, this study can support preventive maintenance of wind energy sources by making them more reliable towards tackling climate change.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2022 Climate Change AI Workshop, NeurIPS, New Orleans, USA</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>A Deep Learning Framework for Wind Turbine Repair Action Prediction Using Alarm Sequences and Long Short Term Memory Algorithms.</h3>
 							<ul class="blog-meta">
 											<li>Walker, C., 
@@ -137,7 +180,7 @@ With an increasing emphasis on driving down the costs of Operations and Maintena
 						</div>
 						<!-- blog tags -->
 
-						<!-- publication entry -->	
+						<!-- publication entry -->		
 
 					<!-- publication entry -->
 
