--- a/publications.html
+++ b/publications.html
@@ -98,48 +98,7 @@
 <p>Complete list of our group and member's publications. Click tags to sort by topic.</p>
 
 
-					<!-- publication entry -->
-
-						<div class="blog-content">
-							<h3>Generalized Ice Detection on Wind Turbine Rotor Blades with Neural Style Transfer.</h3>
-							<ul class="blog-meta">
-											<li>
-									<i class="fa fa-user"></i>
-									<a href="index.html#team">Chatterjee, J.</a>
-								</li>, Alvela Nieto, M., Gelbhardt, H., 
-									<li>
-									<i class="fa fa-user"></i>
-									<a href="index.html#team">Dethlefs, N.</a>
-								</li>, Ohlendorf, J. and K.D. Thoben. 
-								<li>
-								<a href="https://www.climatechange.ai/papers/neurips2022/47"><i class="fa fa-link"></i></a>Link</li>	
-							</ul>
-
-							<ul class="blog-meta">
-								<abstract style="display:inline" ;>
-									<details open style="display:inline;">
-										<summary>
-											<span style="color:#6195FF">Hide/Show Full Abstract</span>
-										</summary>
-Wind energy’s ability to liberate the world of conventional sources of energy relies on lowering the significant costs associated with the maintenance of wind turbines. Since icing events on turbine rotor blades are a leading cause of operational failures, identifying icing in advance is critical. Some recent studies focus on specific wind parks and fail to generalize to unseen scenarios (e.g. new rotor blade designs). We propose the utilisation of synthetic data augmentation via neural style transfer to improve the generalization of existing ice prediction models. We show that training models with augmented data that captures domain-invariant icing characteristics can help improve predictive performance across multiple wind parks. Through efficient identification of icing, this study can support preventive maintenance of wind energy sources by making them more reliable towards tackling climate change.
-									</details>
-								</abstract>
-							</ul>
-							<ul class="blog-meta">
-								<li>2022 Climate Change AI Workshop, NeurIPS, New Orleans, USA</li>
-							</ul>
-							<!-- blog tags -->
-							<div class="blog-tags">
-								<h5>Tags :</h5>
-					<a href="deep_learning.html#publications">
-									<i class="fa fa-tag"></i>Deep Learning</a>
-								<a href="sustainability.html#publications">
-									<i class="fa fa-tag"></i>Sustainability</a>										
-							</div>
-						</div>
-						<!-- blog tags -->
-
-						<!-- publication entry -->	
+c
 
 					<!-- publication entry -->
 
@@ -227,6 +186,48 @@ Intelligent question-answering (QA) systems have witnessed increased interest in
 
 						<!-- publication entry -->											
 
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Multimodal Approach to Early Detection of Harmful Algal Blooms.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dagtekin, O.</a> and
+								</li>
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>
+								<li>
+								<!--<a href="https://www.climatechange.ai/papers/neurips2022/47"><i class="fa fa-link"></i></a>Link</li>	-->
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+A rise in ecological anomalous events will be observed due to climate change. One such event is the harmful algal bloom which occurs due to an increase in nutrients from anthropogenic activities and has economic and ecological effects. Algae thrive in warmer temperatures which will lead to an increase in the frequency of harmful algal blooms. To overcome this increasing frequency, early detection tools are essential. Deep learning and frequent monitoring have been used to detect this phenomenon with a focus on unimodal approaches. In this work, we propose using multiple sources of satellite and in-situ data for detecting algal blooms with a joint multimodal learning approach, focusing on the North Sea and the Irish Sea. This work will aid domain experts to monitor potential changes to the ecosystem done by human interference and to take action when necessary.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2022 ECML/PKDD Workshop on Machine Learning for Earth Observation</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
 
 					<!-- publication entry -->
 
