--- a/sustainability.html
+++ b/sustainability.html
@@ -222,7 +222,50 @@ Intelligent question-answering (QA) systems have witnessed increased interest in
 						</div>
 						<!-- blog tags -->
 
-						<!-- publication entry -->											
+						<!-- publication entry -->		
+						
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Multimodal Approach to Early Detection of Harmful Algal Blooms.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dagtekin, O.</a> and
+								</li>
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>
+								<li>
+								<!--<a href="https://www.climatechange.ai/papers/neurips2022/47"><i class="fa fa-link"></i></a>Link</li>	-->
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+A rise in ecological anomalous events will be observed due to climate change. One such event is the harmful algal bloom which occurs due to an increase in nutrients from anthropogenic activities and has economic and ecological effects. Algae thrive in warmer temperatures which will lead to an increase in the frequency of harmful algal blooms. To overcome this increasing frequency, early detection tools are essential. Deep learning and frequent monitoring have been used to detect this phenomenon with a focus on unimodal approaches. In this work, we propose using multiple sources of satellite and in-situ data for detecting algal blooms with a joint multimodal learning approach, focusing on the North Sea and the Irish Sea. This work will aid domain experts to monitor potential changes to the ecosystem done by human interference and to take action when necessary.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2022 ECML/PKDD Workshop on Machine Learning for Earth Observation</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->																
 										
 					<!-- publication entry -->
 
