--- a/nlp.html
+++ b/nlp.html
@@ -98,6 +98,48 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>This new conversational AI model can be your friend, philosopher, and guide ... and even your worst enemy.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Chatterjee, J.</a>
+								</li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>
+								<li>
+								<a href="https://www.cell.com/patterns/fulltext/S2666-3899(22)00323-3"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+We explore the recently released ChatGPT model, one of the most powerful conversational AI models that has ever been developed. This opinion provides a perspective on its strengths and weaknesses and a call to action for the AI community (including academic researchers and industry) to work together on preventing potential misuse of such powerful AI models in our everyday lives.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2023 Patterns Volume 4, Issue 1, Opinion Article</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>RELATE: Generating a linguistically inspired Knowledge Graph for fine-grained emotion classification.</h3>
 							<ul class="blog-meta">
 								<li>Schoene, A., 
