--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ Victoria is an Aura CDT PhD student using climate change models and machine lear
 </ul>	
 <br>
 
-<h6>Lydia Bryan-Smith</h6>, PhD student
+<h6>Lydia Bryan-Smith</h6>, PhD student, Experimental Officer
 &nbsp;&nbsp;
 <a href="mailto:L.Bryan-Smith-2014@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
 <a href="https://github.com/sbrl"><i class="fa fa-git"></i></a>
@@ -542,37 +542,9 @@ Lydia is a PhD researcher in Computer Science at the University of Hull, previou
 Her PhD project investigates deep learning algorithms for real-time flood prediction from multiple disparate data sources. An
 underlying idea of Lydia's research is to combine traditional hydro-dynamic flood models with modern AI techniques to achieve 
 a balance between high accuracy of forecasts and efficient predictions. The learning models are trained with information from 
-different sources including heights maps of the geographical area, dynamic rainfall radar data, as well as social media posts.
+different sources including heights maps of the geographical area, dynamic rainfall radar data, as well as social media posts. <br>
+She is also now an Experimental Officer for the School of Computer Science at the University of Hull. 
 </p>
-</details>
-</abstract>
-</ul>	
-<br>
-
-<h6>Onatkut Dagtekin</h6>, PhD Student &nbsp;&nbsp;
-<a href="mailto:O.Dagtekin-2019@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://www.researchgate.net/profile/Onatkut_Dagtekin"><i class="fa fa-home"></i></a>
-<a href="https://scholar.google.com/citations?user=tJKdwIQAAAAJ&hl=en"><i class="fa fa-google"></i></a>
-<a href="https://www.linkedin.com/in/onatkut-dagtekin-3b890b211/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
-<br> Artificial intelligence, machine learning, environmental modelling, natural language processing
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-<span style="color:#6195FF">Full profile</span>
-</summary>
-Onatkut is currently a PhD student in Computer Science at the University of Hull. He holds an MSc degree from the University
-of Manchester. For his PhD project, he 
- investigates deep learning techniques to discover key predictors of water quality from 
-high-frequency sensor outputs. These techniques aim to be as much as possible independent of particular geographical 
-locations but rather rooted in the environmental context in which they occur. This can make them potentially transferable 
-across different water bodies and regions of the world, including e.g. phenomena such as proximity of water to farmland, 
-caves, industrial activity, impact of natural phenomena, such as land slides, floods, and other weather events. The
-overarching goal of the project is to be able to understand and predict the impact of human activity on aquatic 
-ecosystems and wildlife. 
-</p>
- 
 </details>
 </abstract>
 </ul>	
@@ -742,7 +714,15 @@ Ifeoluwa is researching the climate change discourse from a cultural point of vi
 					<h2 class="title">Alumni</h2>
 				</div>
 				<!-- /Section header -->
-				
+								
+
+<h6>Dr Onatkut Dagtekin</h6>, PhD student, now KTP Associate with University of Essex. &nbsp;&nbsp;
+<a href="https://www.researchgate.net/profile/Onatkut_Dagtekin"><i class="fa fa-home"></i></a>
+<a href="https://scholar.google.com/citations?user=tJKdwIQAAAAJ&hl=en"><i class="fa fa-google"></i></a>
+<a href="https://www.linkedin.com/in/onatkut-dagtekin-3b890b211/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+<br> Artificial intelligence, machine learning, environmental modelling, natural language processing
+<br>
+<br>
 
 <h6>Dr Bikash Gwawali</h6>, KTP Associate, now Data Scientist at Spencer Ltd. &nbsp;&nbsp;
 <a href="https://scholar.google.com/citations?user=k78ZknsAAAAJ&hl=en"><i class="fa fa-google"></i></a>
@@ -766,7 +746,7 @@ Ifeoluwa is researching the climate change discourse from a cultural point of vi
 <br>
 <br>
 
-<a href="annika.html"><h6>Dr Annika Schoene</h6></a>, PhD student, now Research Fellow at <a href="http://www.nactem.ac.uk/">NaCTeM</a>, University of Manchester.
+<a href="annika.html"><h6>Dr Annika Schoene</h6></a>, PhD student, then Research Fellow at University of Manchester, now at NorthEastern.
 &nbsp;&nbsp;
 <a href="mailto:A.M.Schoene-2017@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
 <a href="https://annikamarie.github.io/"><i class="fa fa-home"></i></a>
@@ -849,6 +829,27 @@ Deep learning, computer vision
 
 			<div class="row">
 				<!-- blog -->		
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/onat_phd.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="https://scholar.google.com/citations?user=tJKdwIQAAAAJ&hl=en">Onatkut</a></li>
+								<li><i class="fa fa-clock-o"></i>December 2022</li>
+							</ul>
+							<h3>Congrats Onatkut! <i class="fa fa-trophy" style="color:Gold;"></i></h3>
+						<p>Congratulations to Onatkut Dagtekin for passing his PhD viva on the topic of 
+						<i>Deep Learning for the Early Detection of Harmful Algal Blooms and Improving Water Quality Monitoring</i>. Well done Onatkut
+						and good luck in Essex. Keep in touch!
+							 </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->	
 
 				<!-- blog -->
 	<div class="col-md-4">
