--- a/deep_learning.html
+++ b/deep_learning.html
@@ -99,6 +99,54 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Multi-channel Convolutional Neural Network for Precise Meme Classification.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Sherratt, V.</a>,
+								</li>Pimbblet, K., and 
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>
+								<li>
+<!--								<a href="https://www.cell.com/patterns/fulltext/S2666-3899(22)00323-3"><i class="fa fa-link"></i></a>Link</li>	-->
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+This paper proposes a multi-channel convolutional neural network(MC-CNN) for classifying memes and non-memes. Our architecture is 
+trained and validated on a challenging dataset that includes non-meme formats with textual attributes, which are also 
+circulated online but rarely accounted for in meme classification tasks.
+Alongside a transfer learning base, two additional channels capture 
+low-level and fundamental features of memes that make them unique from other images with text. We contribute an approach
+which outperforms previous meme classifiers specifically in live data evaluation, and one that is better able to generalise ’in the
+wild’. Our research aims to improve accurate collation of meme content to support continued research in meme content analysis,
+ and meme-related sub-tasks such as harmful content detection.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2023 Proceedings of the ACM International Conference on Multimedia Retrieval (ICMR). Thessaloniki, Greece.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->						
+					
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>This new conversational AI model can be your friend, philosopher, and guide ... and even your worst enemy.</h3>
 							<ul class="blog-meta">
 											<li>
