--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,52 @@
 					<div class="blog">
 <p>Complete list of our group and member's publications. Click tags to sort by topic.</p>
 
+
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Generalized Ice Detection on Wind Turbine Rotor Blades with Neural Style Transfer.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Chatterjee, J.</a>
+								</li>, Alvela Nieto, M., Gelbhardt, H., 
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>, Ohlendorf, J., Greulich, A., and K.D. Thoben. 
+								<li>
+								<a href="https://www.cambridge.org/core/journals/environmental-data-science/article/domaininvariant-icing-detection-on-wind-turbine-rotor-blades-with-generative-artificial-intelligence-for-deep-transfer-learning/380344A0FF90C22E973A3B06F8E4E2BA"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Wind energy’s ability to liberate the world from conventional sources of energy relies on lowering the significant costs associated with the maintenance of wind turbines. Since icing events on turbine rotor blades are a leading cause of operational failures, identifying icing in advance is critical. Some recent studies have utilized deep learning (DL) techniques to predict icing events with high accuracy by leveraging rotor blade images, but these studies only focus on specific wind parks and fail to generalize to unseen scenarios (e.g., new rotor blade designs). In this paper, we aim to facilitate ice prediction on the face of lack of ice images in new wind parks. We propose the utilization of synthetic data augmentation via a generative artificial intelligence technique—the neural style transfer algorithm to improve the generalization of existing ice prediction models. We also compare the proposed technique with the CycleGAN as a baseline. We show that training standalone DL models with augmented data that captures domain-invariant icing characteristics can help improve predictive performance across multiple wind parks. Through efficient identification of icing, this study can support preventive maintenance of wind energy sources by making them more reliable toward tackling climate change.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2023 Environmental Data Science, Cambridge University Press</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+						
+
+
 					<!-- publication entry -->
 
 						<div class="blog-content">
