--- a/publications.html
+++ b/publications.html
@@ -102,7 +102,7 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
-							<h3>Generalized Ice Detection on Wind Turbine Rotor Blades with Neural Style Transfer.</h3>
+							<h3>Domain-invariant icing detection on wind turbine rotor blades with generative artificial intelligence for deep transfer learning.</h3>
 							<ul class="blog-meta">
 											<li>
 									<i class="fa fa-user"></i>
