--- a/publications.html
+++ b/publications.html
@@ -157,7 +157,7 @@ Wind energy’s ability to liberate the world from conventional sources of energ
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li>
 								<li>
-<!--								<a href="https://www.cell.com/patterns/fulltext/S2666-3899(22)00323-3"><i class="fa fa-link"></i></a>Link</li>	-->
+								<a href="https://dl.acm.org/doi/10.1145/3591106.3592275"><i class="fa fa-link"></i></a>Link</li>	
 							</ul>
 
 							<ul class="blog-meta">
