--- a/index.html
+++ b/index.html
@@ -503,30 +503,6 @@ I am a postdoctoral researcher and Data Scientist (KTP Associate), working on an
 </ul>	
 <br>
 
-<h6>Dr Yifei Wang</h6>, Research Associate
-&nbsp;&nbsp;
-<a href="mailto:Yifei.Wang@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://scholar.google.co.uk/citations?user=ocvfG3kAAAAJ&hl=zh-CN"><i class="fa fa-google"></i></a>
-<br> Natural language processing, AI, deep learning
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-
-<span style="color:#6195FF">Full profile</span>
-</summary>
-Yifei is an expert in text mining and is currently a Research Associate in Natural Language Processing, focusing on text analysis. He is working on a range of different 
-text analysis tasks, including named entity recognition and information extraction, and investigating novel techniques to learn learn 
-robust deep learning models from small datasets - due to limited labels or general data sparsity, e.g. lack multilingual support of existing models.<br>
-
-Yifei holds a PhD from the University of Manchester (2021), where he researched the use of radical features in Chinese medical text mining.
-</p>
-</details>
-</abstract>
-</ul>	
-<br>
-
 <h6>Victoria Bessonova</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:V.Bessonova-2020@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
@@ -636,9 +612,11 @@ Sam works on the automatic processing and analysis of text to identify indicator
 </ul>	
 <br>
 
+
 <h6>Callum Rothon</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:C.ROTHON-2017@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/callum-rothon-877a28180/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
 <br> (Deep) Computer Vision, Structural health monitoring, offshore wind
 <br>
 <ul class="blog-meta">
@@ -738,6 +716,14 @@ Ifeoluwa is researching the climate change discourse from a cultural point of vi
 					<h2 class="title">Alumni</h2>
 				</div>
 				<!-- /Section header -->
+						
+<h6>Dr Yifei Wang</h6>, Research Associate, then at the Open University.
+&nbsp;&nbsp;
+<a href="mailto:Yifei.Wang@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://scholar.google.co.uk/citations?user=ocvfG3kAAAAJ&hl=zh-CN"><i class="fa fa-google"></i></a>
+<br> Natural language processing, AI, deep learning
+<br>
+<br>						
 								
 
 <h6>Dr Onatkut Dagtekin</h6>, PhD student, now KTP Associate with University of Essex. &nbsp;&nbsp;
@@ -853,6 +839,32 @@ Deep learning, computer vision
 
 			<div class="row">
 				<!-- blog -->		
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/summer23.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">BDA</a></li>
+								<li><i class="fa fa-clock-o"></i>June 2023</li>
+							</ul>
+							<h3>Summer conference success</h3>
+						<p>We're busy this summer with <a href="https://www.linkedin.com/in/callum-rothon-877a28180/?originalSubdomain=uk">Callum</a> and <a href="https://www.linkedin.com/in/eamonn-tuton?originalSubdomain=uk">Eamonn</a> first presenting their Offshore Wind research at
+						<a href="https://www.wesc2023.eu/">WESC</a> in Glasgow, and then at 
+						<a href="https://www.bradford.ac.uk/ei/research-and-business/yisec/">YISEC</a> in Bradford. 
+						<a href="https://www.researchgate.net/profile/Victoria-Sherratt">Victoria</a> presented her work on meme classification at <a href="https://icmr2023.org/">ICMR</a> in Thessaloniki, 
+						and <a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a> headed to Alberta, Canada to present this KTP on a funded visit to <a href="https://www.amii.ca/">Amii</a>.
+						<a href="https://www.linkedin.com/in/ifeoluwa-wuraola/?originalSubdomain=ng">Ifeoluwa</a> had her first paper accepted at <a href="https://sites.google.com/view/learning-with-small-data/call-for-papers">LSD</a>
+						and is heading to Gothenburg in September. Congrats all!
+							 </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->	
+
 
 				<!-- blog -->
 	<div class="col-md-4">
