--- a/nlp.html
+++ b/nlp.html
@@ -409,7 +409,7 @@ Classical measurements and modelling that underpin present flood warning and ale
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li>																							
 								<li>
-								<a href="file:///Users/nina/Downloads/TAC_Journal.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	
+								<a href="publications/TAC_Journal.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	
 							</ul>
 
 							<ul class="blog-meta">
