--- a/publications.html
+++ b/publications.html
@@ -973,7 +973,7 @@ As urban environments manifest high levels of complexity it is of vital importan
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li>																							
 								<li>
-								<a href="file:///Users/nina/Downloads/TAC_Journal.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	
+								<a href="publications/TAC_Journal.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	
 							</ul>
 
 							<ul class="blog-meta">
