--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,48 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Intelligent digital twin -- machine learning system for real-time wind turbine wind speed and power generation forecasting.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Tuton, E.</a>, 
+								</li> Ma, X., and 
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>,
+								</li> 
+								<li>
+								<a href="publications/AE-0097-Final.pdf"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Wind power is a key pillar in efforts to decarbonise energy production. However, variability in wind speed and resultant wind turbine power generation poses a challenge for power grid integration. Digital Twin (DT) technology provides intelligent service systems, combining real-time monitoring, predictive capabilities and communication technologies. Current DT research for wind turbine power generation has focused on providing wind speed and power generation predictions reliant on Supervisory Control and Data Acquisition (SCADA) sensors, with predictions often limited to the timeframe of datasets. This research looks to expand on this, utilising a novel framework for an intelligent DT system powered by k-Nearest Neighbour (kNN) regression models to upscale live wind speed forecasts to higher wind turbine hub-height and then forecast power generation. As there is no live link to a wind turbine, the framework is referred to as a “Simulated Digital Twin” (SimTwin). 2019-2020 SCADA and wind speed data are used to evaluate this, demonstrating that the method provides suitable predictions. Furthermore, full deployment of the SimTwin framework is demonstrated using live wind speed forecasts. This may prove useful for operators by reducing reliance on SCADA systems and provides a research and development tool where live data is limited.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2023 The 6th International Conference on Renewable Energy and Environment Engineering (REEE 2023)</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>																		
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Real-time social media sentiment analysis for rapid impact assessment of floods.</h3>
 							<ul class="blog-meta">
 											<li>
