--- a/index.html
+++ b/index.html
@@ -475,8 +475,28 @@ natural events such as floods. When I have time I do some research in digital co
 </ul>	
 <br>
 
+<h6>Dr Jon Carrick</h6>, Research and KTP Associate
+&nbsp;&nbsp;
+<a href="mailto:J.Carrick@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/jon-carrick-620047200?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+<br> Data science, data-to-text, IoT processing
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
 
-<h6>Dr Joyjit Chatterjee</h6>, KTP Associate
+<span style="color:#6195FF">Full profile</span>
+</summary>
+Jon is leading applied dresearch on a Knowledge Transfer Partnership with Connexin to generate reports and insights from sensor and speech information to enhance residential care.
+
+</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+<h6>Dr Joyjit Chatterjee</h6>, Research and KTP Associate
 <a href="mailto:J.Chatterjee-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
 <a href="https://joyjitchatterjee.github.io/"><i class="fa fa-home"></i></a>
 <a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en"><i class="fa fa-google"></i></a>
