--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,48 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Linguistic Pattern Analysis in the Climate Change-Related Tweets from UK and Nigeria.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Wuraola, I.</a>, 
+								</li> 
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>, and D. Marciniak
+								</li> 
+								<li>
+								<a href="https://aclanthology.org/2023.clasp-1.11.pdf"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+To understand the global trends of human opinion on climate change in specific geographical areas, this research proposes a framework to analyse linguistic features and cultural differences in climate-related tweets. Our study combines transformer networks with linguistic feature analysis to address small dataset limitations and gain insights into cultural differences in tweets from the UK and Nigeria. Our study found that Nigerians use more leadership language and informal words in discussing climate change on Twitter compared to the UK, as these topics are treated as an issue of salience and urgency. In contrast, the UK’s discourse about climate change on Twitter is characterised by using more formal, logical, and longer words per sentence compared to Nigeria. Also, we confirm the geographical identifiability of tweets through a classification task using DistilBERT, which achieves 83% of accuracy.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2023 Proceedings of the CLASP Conference on Learning with Small Data (LSD), Gothenburg,  Sweden</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>																										
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Intelligent digital twin -- machine learning system for real-time wind turbine wind speed and power generation forecasting.</h3>
 							<ul class="blog-meta">
 											<li>
