--- a/index.html
+++ b/index.html
@@ -612,6 +612,28 @@ Erv is currently researching efficient ways to model sequencies and time series.
 </ul>	
 <br>
 
+<h6>Oyinkansola Onwuchekwa</h6>, PhD student 
+&nbsp;&nbsp;
+<a href="mailto:O.C.ONWUCHEKWA-2021@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/oyinkan-chekwas/?originalSubdomain=ng"><i class="fa fa-linkedin-square" ></i></a>
+<br> AI, deep learning, music and culture
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+Oyinkansola is researching the connections between language and music across different cultures.
+
+</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+
 <h6>Samuel Rose</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:s.p.rose-2017@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
